--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       height: 100%;
       overflow: hidden;
     }
+    #game-container {
+      width: 100vw;
+      height: 100vh;
+    }
   </style>
 </head>
 <body>
