--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meu Jogo Phaser</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
+  <title>Jogo Phaser Responsivo</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
       overflow: hidden;
+      height: 100%;
+      width: 100%;
     }
     #game-container {
       width: 100vw;
       height: 100vh;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.js"></script>
 </head>
 <body>
   <div id="game-container"></div>
-  <script src="src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 </html>
+
