--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Adicionada para responsividade -->
   <title>Jogo Phaser Responsivo</title>
   <style>
     html, body {
@@ -23,4 +24,3 @@
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
-
